Add test source code for pfgemv

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -62,6 +62,9 @@ BASIC_TESTS =               \
 		test-multifile      \
 		test-io      \
 		test-maxdelayeddim \
+		test-solve \
+		test-pfgemv \
+		test-pfgemm-DSL\
 		regression-check
 
 if FFLASFFPACK_PRECOMPILED
@@ -166,6 +169,11 @@ test_maxdelayeddim_SOURCES = test-maxdelayeddim.C
 #  test_fspmv_SOURCES = test-fspmv.C
 
 regression_check_SOURCES = regression-check.C
+
+
+test_solve_SOURCES = test-solve.C
+test_pfgemv_SOURCES = test-pfgemv.C
+test_pfgemm_DSL_SOURCES = test-pfgemm-DSL.C
 
 dense_generator: dense_generator.C
 	$(CXX) $(CXXFLAGS) $(AM_CXXFLAGS) dense_generator.C -o dense_generator
