fix instr_set macros according to givaro's, fix some Makefile.am, and export REQUIRED_FLAGS

--- a/benchmarks/Makefile.am
+++ b/benchmarks/Makefile.am
@@ -23,11 +23,9 @@
 SUBDIRS =
 benchmarks:  $(BENCHMARKS)
 
-AM_CPPFLAGS=-I$(top_srcdir) -g
-AM_CXXFLAGS = @DEFAULT_CFLAGS@
-AM_CPPFLAGS +=  $(CBLAS_FLAG) $(GIVARO_CFLAGS) $(OPTFLAGS) $(CUDA_CFLAGS) $(PARFLAGS)
+AM_CXXFLAGS = @DEFAULT_CFLAGS@  $(PRECOMPILE_FLAGS)
 LDADD = $(CBLAS_LIBS) $(GIVARO_LIBS) $(CUDA_LIBS)
-AM_LDFLAGS=-static $(PARLIBS)
+AM_LDFLAGS=$(PARLIBS)
 
 PERFPUBLISHERFILE=benchmarks-report.xml
 
@@ -91,7 +89,7 @@ perfpublisher:
 FFLASFFPACK_BIN=@bindir@
 
 define other_compilation
-	$(CXX) $(CXXFLAGS) $(AM_CXXFLAGS) $(OPTFLAGS) $(PARFLAGS) ${INCLUDES} $(AM_CPPFLAGS) $*.C -o $@ $(LDFLAGS) $(LDADD) $(LOADLIBES)
+	$(CXX) $(CXXFLAGS) $(AM_CXXFLAGS) ${INCLUDES} $(AM_CPPFLAGS) $*.C -o $@ $(LDFLAGS) $(LDADD) $(LOADLIBES)
 endef
 
 %:%.C
