--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -23,10 +23,9 @@
 SUBDIRS =
 examples:  $(EXAMPLES)
 
-AM_CXXFLAGS = @DEFAULT_CFLAGS@
-AM_CXXFLAGS +=  $(CBLAS_FLAG) $(GIVARO_CFLAGS) $(OPTFLAGS) $(CUDA_CFLAGS) $(PARFLAGS)
+AM_CXXFLAGS = @DEFAULT_CFLAGS@ $(PRECOMPILE_FLAGS)
 LDADD = $(CBLAS_LIBS) $(GIVARO_LIBS) $(CUDA_LIBS)
-AM_LDFLAGS=-static $(PARLIBS)
+AM_LDFLAGS=$(PARLIBS)
 
 EXAMPLES = pluq
 pluq_SOURCES = pluq.C
@@ -36,7 +35,7 @@ CLEANFILES = $(EXAMPLES)
 EXTRA_PROGRAMS = $(EXAMPLES)
 
 define other_compilation
-	$(CXX) $(CXXFLAGS) $(AM_CXXFLAGS) $(OPTFLAGS) $(PARFLAGS) ${INCLUDES} $(AM_CPPFLAGS) $*.C -o $@ $(LDFLAGS) $(LDADD) $(LOADLIBES)
+	$(CXX) $(CXXFLAGS) $(AM_CXXFLAGS) ${INCLUDES} $(AM_CPPFLAGS) $*.C -o $@ $(LDFLAGS) $(LDADD) $(LOADLIBES)
 endef
 
 %:%.C
