--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,19 @@ tests/test-pluq-check
 tests/test-simd
 tests/test-charpoly
 tests/test-maxdelayeddim
+test-det-check
+test-fdot
+test-fspmm-recint
+test-ftrmm
+test-ftrmv
+test-ftrsv
+test-ftrtri
+test-igemm
+test-io
+test-minpoly
+test-paladin-splitter
+test-pfgemv
+test-solve
 tutorials/101-fgemm
 tutorials/2x2-fgemm
 tutorials/2x2-ftrsv
