--- a/configure.ac
+++ b/configure.ac
@@ -303,7 +303,7 @@ FF_DOC
 CXXFLAGS="${CXXFLAGS} ${REQUIRED_FLAGS}"
 CXXFLAGS="${CXXFLAGS} ${SIMD_CFLAGS}"
 CXXFLAGS="${CXXFLAGS} ${GIVARO_CFLAGS}"
-CXXFLAGS="${CXXFLAGS} ${CBLAS_FLAG}"
+CXXFLAGS="${CXXFLAGS} ${BLAS_CFLAGS}"
 CXXFLAGS="${CXXFLAGS} ${CUDA_CFLAGS}"
 CXXFLAGS="${CXXFLAGS} ${PARFLAGS}"
 #removing possible duplicates of -std=gnu++11 and -fabi-version=6
