forgot to add the fblas.C fil

--- a/macros/CodeChunk/Makefile.am
+++ b/macros/CodeChunk/Makefile.am
@@ -26,6 +26,7 @@ EXTRA_DIST=            \
        clapack.C       \
        lapack.C        \
        cblas.C         \
+       fblas.C         \
        cuda.C          \
        instrset.h      \
        instrset_detect.cpp\
