--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -38,6 +38,7 @@ BASIC_TESTS =               \
 		test-ftrtri         \
 		test-ftrmv          \
 		test-ftrsm          \
+		test-ftrstr          \
 		test-ftrsm-check    \
 		test-ftrmm          \
 		test-fgemm          \
@@ -126,6 +127,7 @@ test_charpoly_SOURCES          = test-charpoly.C
 #  test_ftrmm_SOURCES             = test-ftrmm.C
 #  testeur_fgemm_SOURCES          = testeur_fgemm.C
 test_ftrsm_SOURCES             = test-ftrsm.C
+test_ftrstr_SOURCES             = test-ftrstr.C
 test_ftrmm_SOURCES             = test-ftrmm.C
 test_ftrsv_SOURCES             = test-ftrsv.C
 test_ftrmv_SOURCES             = test-ftrmv.C
