--- a/fflas-ffpack/ffpack/Makefile.am
+++ b/fflas-ffpack/ffpack/Makefile.am
@@ -52,6 +52,8 @@ pkgincludesub_HEADERS=        \
 		ffpack_permutation.inl\
 		ffpack_ftrtr.inl\
 		ffpack_rankprofiles.inl\
+		ffpack_ftrstr.inl\
+		ffpack_ftrssyr2k.inl\
 		$(multiprecision)
 
 
