add test suite for syr2k and debugging completed

--- a/fflas-ffpack/fflas/Makefile.am
+++ b/fflas-ffpack/fflas/Makefile.am
@@ -53,6 +53,7 @@ pkgincludesub_HEADERS=       \
 	   fflas_pftrsm.inl      \
 	   fflas_ftrsm.inl       \
 	   fflas_fsyrk.inl       \
+	   fflas_fsyr2k.inl       \
 	   fflas_fgemv.inl       \
 	   fflas_freivalds.inl       \
 	   fflas_fscal.h       \
