--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,8 @@ benchmarks/benchmark-fspmv
 benchmarks/benchmark-fspmm
 benchmarks/benchmark-inverse
 benchmarks/benchmark-charpoly
+examples/det
+examples/pluq
 tests/regression-check
 tests/test-compressQ
 tests/test-det
