Add an example for matrix multiplication.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -36,12 +36,14 @@ EXAMPLES =  \
 	det		\
 	pluq	\
 	rank	\
-	charpoly
+	charpoly\
+	matmul
 
 det_SOURCES = det.C
 pluq_SOURCES = pluq.C
 rank_SOURCES = rank.C
 charpoly_SOURCES = charpoly.C
+matmul_SOURCES = matmul.C
 
 CLEANFILES = $(EXAMPLES)
 
