--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -163,7 +163,7 @@ regression_check_SOURCES = regression-check.C
 test_solve_SOURCES = test-solve.C
 test_simd_SOURCES = test-simd.C
 test_fgemv_SOURCES = test-fgemv.C
-test_fgemv_rns__SOURCES = test-fgemv-rns.C
+test_fgemv_rns_SOURCES = test-fgemv-rns.C
 #test_pfgemm_DSL_SOURCES = test-pfgemm-DSL.C
 
 
