--- a/configure.ac
+++ b/configure.ac
@@ -287,7 +287,7 @@ FF_OPENBLAS_NUM_THREADS
 # BLAS_LIBS="-L/${BLAS_PATH} ${LAPACK_LIBS} ${BLAS_LIBS}"
 # AC_SUBST(BLAS_LIBS)
 
-# FF_CHECK_CUDA
+ FF_CHECK_CUDA
 
 # AM_CONDITIONAL(FFLASFFPACK_HAVE_BLAS,  test "x$BLAS_FOUND" != "xfalse")
 
